#5875 Ensure team domain does not wrap improperly

--- a/src/app/styles/components/team/_create-team.scss
+++ b/src/app/styles/components/team/_create-team.scss
@@ -64,7 +64,7 @@
   font-size: 24px;
   padding-bottom: 27px;
   margin-#{$from-direction}: 2px;
-  flex: 0 0;
+  flex: 1 0;
 }
 
 .create-team__team-slug-message {
